# hw3-darlene-zhang

./: Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
.github/workflows/: 	deploy.yml
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_utils.py
